# OOP

./: README.md
Task1/: Task1.cpp
Task2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Functions.sln  Task2.cpp  Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters  tests.cpp
Task2/Debug/: Task2.exe.recipe  Task2.ilk  Task2.vcxproj.FileListAbsolute.txt  vc142.idb
Task2/Debug/Task2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Task2/functions/: CMakeLists.txt  cmake_install.cmake  functions.vcxproj  functions.vcxproj.filters
Task2/functions/include/: Functions.h
Task2/functions/src/: Functions.cpp
Task2/include/: CMakeLists.txt
Task2/include/functions/: Functions.h
Task2/src/: CMakeLists.txt  Functions.cpp
Task3/: CMakeLists.txt  Task3.cpp  tests.cpp
Task3/include/: CMakeLists.txt
Task3/include/Functions/: Functions.h
Task3/src/: CMakeLists.txt  Functions.cpp
Task4/: CMakeLists.txt  RingBuffer.cpp  RingBuffer.h  Task4.cpp  Task4.sln  Task4.vcxproj  Task4.vcxproj.filters
Task4/Debug/: Task4.exe.recipe  Task4.ilk  Task4.vcxproj.FileListAbsolute.txt  ringbuffer.obj.enc  vc142.idb
Task4/include/: CMakeLists.txt
Task5/: CMakeLists.txt  Functions.cpp  Functions.h  Task5.cpp  Task5.sln  Task5.vcxproj  Task5.vcxproj.filters
Task6/: CMakeLists.txt  Operations.cpp  Operations.h  RPN.cpp  RPN.h  Stack.cpp  Stack.h  Task6.cpp  Task6.sln  Task6.vcxproj  Task6.vcxproj.filters  tests.cpp
Task6/Debug/: Task6.exe.recipe  Task6.ilk  Task6.vcxproj.FileListAbsolute.txt  rpn.obj.enc  vc142.idb
Task6/Debug/Task6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task6.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Task6/include/: CMakeLists.txt
Task6/include/RPN/: RPN.h
Task6/include/operations/: Operations.h
Task6/include/stack/: Stack.h
Task6/src/: CMakeLists.txt  Operations.cpp  RPN.cpp  Stack.cpp
(+25 files in other folders)
